--- a/index.html
+++ b/index.html
@@ -71,6 +71,11 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 <link rel="stylesheet" href="/assets/css/components.css">
 <link rel="stylesheet" href="/assets/css/navbar.css">
 <link rel="stylesheet" href="/assets/css/responsive.css">
+<link rel="stylesheet" href="/assets/css/scroll-animations.css">
+<link rel="stylesheet" href="/assets/css/optimization.css">
+<link rel="stylesheet" href="/assets/css/forms-footer.css">
+<link rel="stylesheet" href="/assets/css/image-optimization.css">
+<link rel="stylesheet" href="/assets/css/accessibility.css">
 
 <script type="application/ld+json">
 {
@@ -379,13 +384,43 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     </section>
 
     <!-- What I Do -->
-    <section id="work">
+    <section id="work" data-animate="fadeUpScale">
       <div class="section-title">What I Do</div>
-      <div class="grid">
-        <article class="tile">
+      <div class="grid stagger-container">
+        <article class="tile" data-animate="fadeUpScale">
           <h3>Video Editing</h3>
           <p>
             I create high-quality TikTok edits with an efficient DaVinci Resolve workflow—perfect for polished, reliable content
+          </p>
+        </article>
+        <article class="tile" data-animate="fadeUpScale">
+          <h3>Music Production</h3>
+          <p>
+            Original beats and compositions across multiple genres, with releases on Spotify and major streaming platforms.
+          </p>
+        </article>
+        <article class="tile" data-animate="fadeUpScale">
+          <h3>Roblox Development</h3>
+          <p>
+            Building engaging games and experiences in Roblox, from game mechanics to UI design and optimization.
+          </p>
+        </article>
+        <article class="tile" data-animate="fadeUpScale">
+          <h3>UI/UX Design</h3>
+          <p>
+            Creating intuitive and visually appealing interfaces for web and games, focusing on user experience and accessibility.
+          </p>
+        </article>
+        <article class="tile" data-animate="fadeUpScale">
+          <h3>YouTube Content</h3>
+          <p>
+            Tutorials, behind-the-scenes, and creative breakdowns across music, design, and development topics.
+          </p>
+        </article>
+        <article class="tile" data-animate="fadeUpScale">
+          <h3>Community & Collaboration</h3>
+          <p>
+            Engaging with creators and developers, sharing knowledge, and building collaborative projects within the community.
           </p>
         </article>
       </div>
@@ -495,40 +530,113 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     </section>
 
     <!-- Contact -->
-    <section id="contact">
-      <div class="section-title">Contact</div>
+    <section id="contact" data-animate="fadeUpScale">
+      <div class="section-title">Contact & Connect</div>
       <div class="contact-cards">
-        <a class="contact-card" href="mailto:blobbyofficial@blobbyofficial.com">
+        <a class="contact-card" href="mailto:blobbyofficial@blobbyofficial.com" data-animate="slideInLeft">
           <img src="https://www.blobbyofficial.com/assets/images/svg/envelope.svg" alt="Email" />
           <div class="info">
             <div class="title">Email</div>
             <div class="desc">blobbyofficial@outlook.com</div>
           </div>
         </a>
+        <a class="contact-card" href="https://twitter.com/BlobbyOfficial_" target="_blank" rel="noopener noreferrer" data-animate="slideInLeft">
+          <img src="https://www.blobbyofficial.com/assets/images/svg/twitter.svg" alt="Twitter" />
+          <div class="info">
+            <div class="title">Twitter</div>
+            <div class="desc">@BlobbyOfficial_</div>
+          </div>
+        </a>
+        <a class="contact-card" href="https://discord.gg/blobbyofficial" target="_blank" rel="noopener noreferrer" data-animate="slideInRight">
+          <img src="https://www.blobbyofficial.com/assets/images/svg/discord.svg" alt="Discord" />
+          <div class="info">
+            <div class="title">Discord</div>
+            <div class="desc">Join the Community</div>
+          </div>
+        </a>
+        <a class="contact-card" href="https://commission.blobbyofficial.com" target="_blank" rel="noopener noreferrer" data-animate="slideInRight">
+          <img src="https://www.blobbyofficial.com/assets/images/svg/briefcase.svg" alt="Commissions" />
+          <div class="info">
+            <div class="title">Commissions</div>
+            <div class="desc">Hire Me for Projects</div>
+          </div>
+        </a>
       </div>
+      <form class="contact-form" id="contact-form" data-animate="fadeUpScale">
+        <div class="form-group">
+          <label for="name">Name</label>
+          <input type="text" id="name" name="name" placeholder="Your name" required>
+        </div>
+        <div class="form-group">
+          <label for="email">Email</label>
+          <input type="email" id="email" name="email" placeholder="your@email.com" required>
+        </div>
+        <div class="form-group">
+          <label for="subject">Subject</label>
+          <input type="text" id="subject" name="subject" placeholder="What is this about?" required>
+        </div>
+        <div class="form-group">
+          <label for="message">Message</label>
+          <textarea id="message" name="message" placeholder="Your message here..." rows="5" required></textarea>
+        </div>
+        <button type="submit" class="btn primary">Send Message</button>
+      </form>
     </section>
   </main>
 
 
     <footer>
       <div class="container">
-        <div class="muted">© <span id="year"></span> <a href="https://www.blobbyofficial.com" target="_blank" rel="noopener noreferrer">BlobbyOfficial</a> • All rights reserved.</div>
+        <div class="footer-content">
+          <div class="footer-section">
+            <h4>BlobbyOfficial</h4>
+            <p>Musician, Creator & Digital Artist</p>
+          </div>
+          <div class="footer-section">
+            <h4>Quick Links</h4>
+            <ul>
+              <li><a href="#about">About</a></li>
+              <li><a href="#work">What I Do</a></li>
+              <li><a href="https://store.blobbyofficial.com" target="_blank" rel="noopener noreferrer">Store</a></li>
+              <li><a href="https://blog.blobbyofficial.com" target="_blank" rel="noopener noreferrer">Blog</a></li>
+            </ul>
+          </div>
+          <div class="footer-section">
+            <h4>Community</h4>
+            <ul>
+              <li><a href="https://www.youtube.com/@blobby_official" target="_blank" rel="noopener noreferrer">YouTube</a></li>
+              <li><a href="https://twitter.com/BlobbyOfficial_" target="_blank" rel="noopener noreferrer">Twitter</a></li>
+              <li><a href="https://www.tiktok.com/@blobby.official" target="_blank" rel="noopener noreferrer">TikTok</a></li>
+              <li><a href="https://github.com/BlobbyOfficial" target="_blank" rel="noopener noreferrer">GitHub</a></li>
+            </ul>
+          </div>
+          <div class="footer-section">
+            <h4>Projects</h4>
+            <ul>
+              <li><a href="/games">Games Tracker</a></li>
+              <li><a href="https://open.spotify.com/artist/5mD3VSrQZ1eIfhXNjyZCUs" target="_blank" rel="noopener noreferrer">Music</a></li>
+              <li><a href="https://commission.blobbyofficial.com" target="_blank" rel="noopener noreferrer">Commissions</a></li>
+              <li><a href="https://newsletter.blobbyofficial.com" target="_blank" rel="noopener noreferrer">Newsletter</a></li>
+            </ul>
+          </div>
+        </div>
+        <div class="footer-bottom">
+          <div class="muted">© <span id="year"></span> <a href="https://www.blobbyofficial.com" target="_blank" rel="noopener noreferrer">BlobbyOfficial</a> • All rights reserved.</div>
+          <div class="footer-meta">
+            <a href="/sitemap.xml" rel="sitemap">Sitemap</a> • 
+            <a href="/privacy">Privacy</a> • 
+            <a href="/terms">Terms</a>
+          </div>
+        </div>
       </div>
     </footer>
+
+    <!-- Main JavaScript Bundle -->
+    <script defer src="/main.js"></script>
 
     <script>
       // Set copyright year
       document.getElementById("year").textContent = new Date().getFullYear();
-
-      // Accessibility: Focus outline only on keyboard navigation
-      document.body.addEventListener('keydown', function(e) {
-        if (e.key === 'Tab') {
-          document.body.classList.add('user-is-tabbing');
-        }
-      });
-      document.body.addEventListener('mousedown', function() {
-        document.body.classList.remove('user-is-tabbing');
-      });
     </script>
 </body>
 </html>
