--- a/index.html
+++ b/index.html
@@ -34,9 +34,8 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 <meta property="og:locale" content="en-gb" />
 
 
-<meta name="theme-color" content="#0f172a" />
-
-<link rel="apple-touch-icon" href="https://blobbyofficial.com/assets/icons/apple-touch-icon.png" />
+<meta name="theme-color" content="#0f172a">
+<meta name="color-scheme" content="dark">
 <link rel="icon" type="image/png" href="https://blobbyofficial.com/assets/icons/favicon-32x32.png" />
 <link rel="shortcut icon" href="https://blobbyofficial.com/favicon.ico" />
 
@@ -177,7 +176,6 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                 var(--bg);
     color: var(--text);
     line-height: 1.7;
-    font-smooth: always;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
     text-rendering: optimizeLegibility;
@@ -272,8 +270,8 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     position: sticky;
     top: 0;
     z-index: 50;
-    backdrop-filter: blur(12px) saturate(150%);
     -webkit-backdrop-filter: blur(12px) saturate(150%);
+    backdrop-filter: blur(12px) saturate(150%);
     background: linear-gradient(180deg, rgba(11,16,32,0.75) 0%, rgba(11,16,32,0.55) 100%);
     border-bottom: 1px solid rgba(148,163,184,0.15);
     transition: background 400ms ease, border-color 400ms ease, box-shadow 300ms ease;
@@ -419,6 +417,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     border: 1px solid rgba(148, 163, 184, 0.14);
     border-radius: var(--radius);
     padding: 28px;
+    -webkit-backdrop-filter: blur(8px) saturate(120%);
     backdrop-filter: blur(8px) saturate(120%);
     box-shadow: 0 6px 24px rgba(0, 0, 0, 0.25);
     transition: transform 0.3s ease, box-shadow 0.3s ease, border-color 0.3s ease;
@@ -449,6 +448,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     grid-template-columns: 88px 1fr;
     gap: 20px;
     align-items: center;
+    -webkit-backdrop-filter: blur(10px) saturate(120%);
     backdrop-filter: blur(10px) saturate(120%);
     box-shadow: 0 8px 24px rgba(0, 0, 0, 0.25);
     transition: transform 0.35s ease, box-shadow 0.35s ease, border-color 0.3s ease;
@@ -493,6 +493,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     line-height: 1.2;
     background: linear-gradient(90deg, var(--brand), var(--brand-2));
     -webkit-background-clip: text;
+    background-clip: text;
     -webkit-text-fill-color: transparent;
   }
 
@@ -537,6 +538,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     border: 1px solid rgba(148, 163, 184, 0.14);
     border-radius: 18px;
     padding: 24px;
+    -webkit-backdrop-filter: blur(6px) saturate(120%);
     backdrop-filter: blur(6px) saturate(120%);
     box-shadow: 0 4px 16px rgba(0, 0, 0, 0.2);
     transition: transform 0.3s ease, box-shadow 0.3s ease, border-color 0.3s ease, background 0.3s ease;
@@ -556,6 +558,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     font-weight: 600;
     background: linear-gradient(90deg, var(--brand), var(--brand-2));
     -webkit-background-clip: text;
+    background-clip: text;
     -webkit-text-fill-color: transparent;
   }
 
@@ -739,20 +742,23 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
   .brand .title{font-weight:600;}
   .brand .sub{font-size:12px;color:var(--muted);}
   .brand-group{display:flex;align-items:center;gap:6px;}
+  .nav-brand-container{display:flex;align-items:center;}
+  .brand-small-title{font-weight:700;}
+  .brand-small-sub{font-size:12px;color:var(--muted);}
   .nav-links{display:flex;align-items:center;gap:14px;margin-left:18px;}
   .nav-links a{color:inherit;text-decoration:none;padding:8px 10px;border-radius:8px;font-weight:500;}
   .drop-btn{display:inline-grid;place-items:center;padding:8px;border-radius:8px;background:transparent;cursor:pointer;}
   .chev{width:12px;height:12px;transition:transform var(--transition);}
   .drop-btn[aria-expanded="true"] .chev{transform:rotate(180deg);}
-  .dropdown{position:absolute;min-width:220px;background:rgba(7,10,14,0.96);border-radius:12px;padding:8px;box-shadow:0 8px 30px rgba(2,6,23,0.6);backdrop-filter:blur(8px);opacity:0;transform:translateY(-8px) scale(.98);pointer-events:none;transition:opacity var(--transition),transform var(--transition);}
+  .dropdown{position:absolute;min-width:220px;background:rgba(7,10,14,0.96);border-radius:12px;padding:8px;box-shadow:0 8px 30px rgba(2,6,23,0.6);-webkit-backdrop-filter:blur(8px);backdrop-filter:blur(8px);opacity:0;transform:translateY(-8px) scale(.98);pointer-events:none;transition:opacity var(--transition),transform var(--transition);}
   .dropdown.open{opacity:1;transform:translateY(0) scale(1);pointer-events:auto;}
   .dropdown a{display:block;padding:10px;border-radius:8px;text-decoration:none;color:var(--muted);}
   .mobile-navbar{display:none;}
   .hamburger{padding:8px;border-radius:8px;background:transparent;cursor:pointer;}
   .overlay{position:fixed;inset:0;display:flex;z-index:9999;align-items:stretch;justify-content:flex-end;}
   .overlay.hidden{display:none;}
-  .scrim{position:absolute;inset:0;background:rgba(2,6,12,0.5);backdrop-filter:blur(6px);opacity:0;transition:opacity var(--transition);}
-  .panel{width:min(420px,100%);background:var(--panel);box-shadow:-30px 0 60px rgba(2,6,23,0.6);transform:translateX(14%);opacity:0;transition:transform 350ms cubic-bezier(.2,.9,.25,1),opacity 280ms;display:flex;flex-direction:column;padding:18px;backdrop-filter:blur(8px);}
+  .scrim{position:absolute;inset:0;background:rgba(2,6,12,0.5);-webkit-backdrop-filter:blur(6px);backdrop-filter:blur(6px);opacity:0;transition:opacity var(--transition);}
+  .panel{width:min(420px,100%);background:var(--panel);box-shadow:-30px 0 60px rgba(2,6,23,0.6);transform:translateX(14%);opacity:0;transition:transform 350ms cubic-bezier(.2,.9,.25,1),opacity 280ms;display:flex;flex-direction:column;padding:18px;-webkit-backdrop-filter:blur(8px);backdrop-filter:blur(8px);}
   .panel.open{transform:translateX(0);opacity:1;}
   .panel .top{display:flex;align-items:center;justify-content:space-between;}
   .brand-small{display:flex;align-items:center;gap:10px;text-decoration:none;color:inherit;}
@@ -782,6 +788,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     opacity: 1;
     pointer-events: all;
     transition: opacity 0.6s cubic-bezier(0.2, 0.8, 0.4, 1);
+    -webkit-backdrop-filter: blur(12px) saturate(150%);
     backdrop-filter: blur(12px) saturate(150%);
     animation: gateFadeIn 0.8s cubic-bezier(0.16, 1, 0.3, 1) both;
   }
@@ -870,7 +877,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
   <!-- Desktop Navbar -->
   <header class="desktop-navbar">
     <div class="container nav">
-      <div style="display:flex;align-items:center">
+      <div class="nav-brand-container">
         <div class="brand-group">
           <a class="brand" href="https://www.blobbyofficial.com">
             <img src="https://www.blobbyofficial.com/assets/icons/icon.png" alt="BlobbyOfficial logo" />
@@ -879,10 +886,10 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
               <div class="sub">Creators & Stuff</div>
             </div>
           </a>
-          <button class="drop-btn" id="dropToggle" aria-haspopup="menu" aria-expanded="false" aria-controls="brandDropdown">
+          <button class="drop-btn" id="dropToggle" aria-haspopup="menu" aria-expanded="false" aria-controls="brandDropdown" title="Toggle menu">
             <svg class="chev" viewBox="0 0 20 20" fill="none"><path d="M5 8.5L10 13.5L15 8.5" stroke="currentColor" stroke-width="1.6" stroke-linecap="round" stroke-linejoin="round"/></svg>
           </button>
-          <div id="brandDropdown" class="dropdown" role="menu">
+          <div id="brandDropdown" class="dropdown">
             <a href="#about">About</a>
             <a href="#work">What I Do</a>
             <a href="#social_media">Social Media</a>
@@ -922,7 +929,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
       <div class="top">
         <a class="brand-small" href="https://www.blobbyofficial.com">
           <img src="https://www.blobbyofficial.com/assets/icons/icon.png" alt="logo" />
-          <div><div style="font-weight:700">BlobbyOfficial</div><div style="font-size:12px;color:var(--muted)">Menu</div></div>
+          <div><div class="brand-small-title">BlobbyOfficial</div><div class="brand-small-sub">Menu</div></div>
         </a>
         <button class="close-btn" id="closeBtn">×</button>
       </div>
@@ -1117,42 +1124,42 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     <section id="links">
       <div class="section-title">Links</div>
       <div class="links">
-        <a class="link-card" href="mailto:blobbyofficial@blobbyofficial.com" target="_blank">
+        <a class="link-card" href="mailto:blobbyofficial@blobbyofficial.com">
           <img src="https://www.blobbyofficial.com/assets/images/svg/envelope.svg" alt="Email" />
           <div class="info">
             <div class="title">Email</div>
             <div class="desc">blobbyofficial@blobbyofficial.com</div>
           </div>
         </a>
-        <a class="link-card" href="https://tiktok.com/@blobby.official/" target="_blank">
+        <a class="link-card" href="https://tiktok.com/@blobby.official/" target="_blank" rel="noopener noreferrer">
           <img src="https://www.blobbyofficial.com/assets/images/svg/tiktok.svg" alt="TikTok" />
           <div class="info">
             <div class="title">tiktok</div>
             <div class="desc">@blobby.official</div>
           </div>
         </a>
-        <a class="link-card" href="https://www.reddit.com/r/blobbyofficial/" target="_blank">
+        <a class="link-card" href="https://www.reddit.com/r/blobbyofficial/" target="_blank" rel="noopener noreferrer">
           <img src="https://www.blobbyofficial.com/assets/images/svg/reddit.svg" alt="Reddit" />
           <div class="info">
             <div class="title">Reddit</div>
             <div class="desc">r/blobbyofficial</div>
           </div>
         </a>
-        <a class="link-card" href="https://www.youtube.com/@blobby_official" target="_blank">
+        <a class="link-card" href="https://www.youtube.com/@blobby_official" target="_blank" rel="noopener noreferrer">
           <img src="https://www.blobbyofficial.com/assets/images/svg/youtube.svg" alt="YouTube" />
           <div class="info">
             <div class="title">YouTube</div>
             <div class="desc">@blobby_official</div>
           </div>
         </a>
-        <a class="link-card" href="https://github.com/BlobbyOfficial" target="_blank">
-          <img src="https://www.blobbyofficial.com/assets/images/svg/github.svg" alt="YouTube" />
+        <a class="link-card" href="https://github.com/BlobbyOfficial" target="_blank" rel="noopener noreferrer">
+          <img src="https://www.blobbyofficial.com/assets/images/svg/github.svg" alt="GitHub" />
           <div class="info">
             <div class="title">GitHub</div>
             <div class="desc">@blobbyofficial</div>
           </div>
         </a>
-        <a class="link-card" href="https://open.spotify.com/artist/5mD3VSrQZ1eIfhXNjyZCUs" target="_blank">
+        <a class="link-card" href="https://open.spotify.com/artist/5mD3VSrQZ1eIfhXNjyZCUs" target="_blank" rel="noopener noreferrer">
           <img src="https://www.blobbyofficial.com/assets/images/svg/spotify.svg" alt="Spotify" />
           <div class="info">
             <div class="title">Spotify</div>
@@ -1172,7 +1179,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
             Welcome to the <strong>Blobby Games Tracker</strong> — your central place to track updates, and stay up to date with the latest Roblox experiences developed by <strong>The Official Blobby Group</strong>.
           </p>
         <div class = "Link">
-          <a class="btn primary" href="https://www.blobbyofficial.com/games" target="_blank">Visit Games Tracker</a>
+          <a class="btn primary" href="https://www.blobbyofficial.com/games" target="_blank" rel="noopener noreferrer">Visit Games Tracker</a>
         </div>
       </div>
     </section>
